@@ -2,6 +2,7 @@
   * New 'legacy.axes' argument to 'plot' 1-specificity rather than specificity
   * New 'axes' argument to turn off the plotting of the axis
   * New 'power.roc.test' function
+  * 'auc' and 'multiclass.auc' objects now also have secondary class 'numeric'
   * Updated load call
   * Delong's CI reversed in ROC curves with direction=">"
   * Delong's CI AUC returned values > 1 or < 0 in some rare cases
